--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
 
 <header>
-    <img src="/img/Desain tanpa judul.png" alt="Foto Profil" class="profile-image">
+    <img src="img/Desain tanpa judul.png" alt="Foto Profil" class="profile-image">
     <div class="header-text">
         <h1>Muhammad Farhan</h1>
         <p>Selamat datang di portofolio saya!</p>
@@ -123,22 +123,22 @@
     const projects = [
         {
             title: 'Tombol Penyebragan Berbasis Micro Controller',
-            image: '/img/Desain tanpa judul.png',
+            image: 'img/Desain tanpa judul.png',
             description: 'Membuat tombol penyebrangan dengan Micro Controller'
         },
         {
             title: 'Forward Reverse Star Delta Otomatis',
-            image: '/img/re-zero-ram-1920-x-1080-wallpaper-61f4p7ddgtnasc3b.jpg', 
+            image: 'img/re-zero-ram-1920-x-1080-wallpaper-61f4p7ddgtnasc3b.jpg', 
             description: 'Installasi dan Oprasi Forward Reverse Star Delta otomatis'
         },
         {
             title: 'Proyek C',
-            image: '/img/Desain tanpa judul.png',
+            image: 'img/Desain tanpa judul.png',
             description: 'Deskripsi singkat tentang Proyek C.'
         },
         {
             title: 'Proyek D',
-            image: '/img/re-zero-ram-1920-x-1080-wallpaper-61f4p7ddgtnasc3b.jpg',
+            image: 'img/re-zero-ram-1920-x-1080-wallpaper-61f4p7ddgtnasc3b.jpg',
             description: 'Deskripsi singkat tentang Proyek D.'
         }
     ];
