--- a/index.html
+++ b/index.html
@@ -6,156 +6,212 @@
     <title>Portofolio Saya</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #e9ecef;
-            color: #333;
             line-height: 1.6;
+            background-color: #e9ecef;
+            color: #343a40;
         }
+
         header {
-            background: #343a40;
-            color: #ffffff;
-            padding: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            background: #ff0000; /* YouTube red */
+            color: #fff;
+            padding: 30px 20px;
+            text-align: center;
+            position: relative;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-        .profile-image {
+
+        .profile-img {
             width: 100px;
             height: 100px;
             border-radius: 50%;
-            margin-right: 10px; /* Mengurangi jarak di sebelah kanan gambar */
-            border: 3px solid #ffffff;
-            transition: transform 0.3s;
-        }
-        .profile-image:hover {
-            transform: scale(1.1);
-        }
-        .header-text {
-            text-align: left;
-        }
-        h1 {
-            font-size: 2.5rem;
-            margin: 0; /* Menghapus margin untuk mengurangi jarak vertikal */
-        }
-        p {
-            font-size: 1.2rem;
-            margin: 0; /* Menghapus margin untuk mengurangi jarak vertikal */
-        }
-        section {
-            padding: 20px;
-        }
-        h2 {
-            text-align: center;
-            color: #343a40;
-            margin-bottom: 20px;
-        }
-        .portfolio {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .portfolio-item {
-            background: white;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            overflow: hidden;
-            transition: transform 0.3s, box-shadow 0.3s;
-            position: relative;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-        .portfolio-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-        }
-        .portfolio img {
-            width: 100%;
-            height: 200px;
             object-fit: cover;
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            border: 3px solid #fff;
         }
-        .portfolio-item h3 {
-            padding: 10px;
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 15px 0 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin: 0 20px;
+        }
+
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+
+        nav ul li a:hover {
+            color: #ffc107; /* Gold */
+        }
+
+        section {
+            padding: 30px;
+            margin: 20px auto;
+            max-width: 800px;
+            background: #fff;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+        }
+
+        .portfolio {
+            background: #f8f9fa;
+            padding: 20px;
+            margin: 15px 0;
+            border-radius: 8px;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .portfolio:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        .experience {
+            background: #f8f9fa;
+            padding: 15px;
+            border-left: 5px solid #007bff;
+            margin: 20px 0;
+            transition: transform 0.3s, background-color 0.3s;
+        }
+
+        .experience:hover {
+            transform: scale(1.02);
+            background-color: #e2e6ea;
+        }
+
+        .portfolio img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+
+        .video-container {
+            margin: 15px 0;
             text-align: center;
-            font-size: 1.5rem;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background 0.3s;
+            margin-top: 15px;
+        }
+
+        .button:hover {
+            background: #0056b3;
+        }
+
+        .social-icons a {
+            margin: 0 10px;
             color: #007bff;
+            text-decoration: none;
         }
-        .portfolio-item p {
-            padding: 0 10px 10px 10px;
-            text-align: center;
-            color: #666;
-        }
+
         footer {
             text-align: center;
-            padding: 20px;
+            padding: 20px 0;
             background: #343a40;
-            color: white;
-            position: relative;
-            bottom: 0;
-            width: 100%;
+            color: #fff;
+            margin-top: 20px;
+        }
+
+        h2, h3 {
+            color: #007bff;
+        }
+
+        @media (max-width: 600px) {
+            nav ul li {
+                display: block;
+                margin: 10px 0;
+            }
         }
     </style>
 </head>
 <body>
-
-<header>
-    <img src="img/Desain tanpa judul.png" alt="Foto Profil" class="profile-image">
-    <div class="header-text">
+    <header>
         <h1>Muhammad Farhan</h1>
-        <p>Selamat datang di portofolio saya!</p>
-    </div>
-</header>
+        <p>Programer website dan IoT Developer Berbasis Microcontroller & PLC</p>
+        <img src="foto.png" alt="Foto Profil" class="profile-img">
+        <nav>
+            <ul>
+                <li><a href="#about">Tentang</a></li>
+                <li><a href="#portfolio">Portofolio</a></li>
+                <li><a href="#experience">Pengalaman Kerja</a></li>
+                <li><a href="#contact">Kontak</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<section>
-    <h2>Dokumentasi Project Saya</h2>
-    <div class="portfolio" id="portfolio">
-        <!-- Item portofolio akan ditambahkan di sini dengan JavaScript -->
-    </div>
-</section>
+    <section id="about">
+        <h2>Tentang Saya</h2>
+        <p>Lulusan SMAN 42 Jakarta Timur tahun 2024, memiliki pemahaman mendalam tentang mikrokontroler dan PLC.
+             Tertarik melakukan eksperimen kelistrikan berbasis IoT dan Arduino. Mampu melakukan instalasi dan pengoperasian sistem motor Forward Reverse Start Delta secara otomatis. Terampil dalam bahasa pemrograman C++ dan Python, yang mendukung pengembangan proyek-proyek teknologi inovatif.</p>
+        <a href="Isa Taoi _ Roll20 Characters.pdf" class="button">Unduh CV</a>
+    </section>
 
-<footer>
-    <p>&copy; 2024 Portofolio Saya. Semua hak dilindungi.</p>
-</footer>
+    <section id="portfolio">
+        <h2>Portofolio</h2>
+        <div class="portfolio">
+            <h3>Smart Home</h3>
+            <img src="smart-home.jpg" alt="Gambar Proyek 1">
+            <p>Deskripsi singkat proyek ini. Saya mengerjakan Smart Home menggunakan Arduino Uno R3.</p>
+        </div>
+        <div class="portfolio">
+            <h3>Mesin Pakan Otomatis</h3>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/N7aNDkxx_1M?si=S8NJDYbR39b-2y5M" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <p>Deskripsi singkat proyek ini. Saya mengerjakan Mesin Pakan Otomatis menggunakan Arduino Uno.</p>
+            </div>
+        </div>
+    </section>
 
-<script>
-    const projects = [
-        {
-            title: 'Tombol Penyebragan Berbasis Micro Controller',
-            image: 'img/Desain tanpa judul.png',
-            description: 'Membuat tombol penyebrangan dengan Micro Controller'
-        },
-        {
-            title: 'Forward Reverse Star Delta Otomatis',
-            image: 'img/re-zero-ram-1920-x-1080-wallpaper-61f4p7ddgtnasc3b.jpg', 
-            description: 'Installasi dan Oprasi Forward Reverse Star Delta otomatis'
-        },
-        {
-            title: 'Proyek C',
-            image: 'img/Desain tanpa judul.png',
-            description: 'Deskripsi singkat tentang Proyek C.'
-        },
-        {
-            title: 'Proyek D',
-            image: 'img/re-zero-ram-1920-x-1080-wallpaper-61f4p7ddgtnasc3b.jpg',
-            description: 'Deskripsi singkat tentang Proyek D.'
-        }
-    ];
+    <section id="experience">
+        <h2>Pengalaman Kerja</h2>
+        <div class="experience">
+            <p><strong>PT. JayaWijaya</strong> - Admin Keuangan (3 tahun)</p>
+        </div>
+        <div class="experience">
+            <p><strong>Nama Perusahaan Lain</strong> - [Posisi] ([Durasi])</p>
+        </div>
+        <!-- Tambahkan pengalaman kerja lain di sini -->
+    </section>
 
-    const portfolioContainer = document.getElementById('portfolio');
+    <section id="contact">
+        <h2>Kontak</h2>
+        <p>Email: <a href="mailto:emailanda@example.com">emailanda@example.com</a></p>
+        <p>Telepon: 012-3456789</p>
+    </section>
 
-    projects.forEach(project => {
-        const item = document.createElement('div');
-        item.classList.add('portfolio-item');
-        item.innerHTML = `
-            <img src="${project.image}" alt="${project.title}">
-            <h3>${project.title}</h3>
-            <p>${project.description}</p>
-        `;
-        portfolioContainer.appendChild(item);
-    });
-</script>
+    <footer>
+        <p>&copy; 2024 Muhammad Farhan. Semua Hak Dilindungi.</p>
+        <div class="social-icons">
+            <a href="https://github.com/username" target="_blank">GitHub</a>
+            <a href="https://linkedin.com/in/username" target="_blank">LinkedIn</a>
+            <a href="https://twitter.com/username" target="_blank">Twitter</a>
+        </div>
+    </footer>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            console.log("Portofolio dimuat dengan sukses!");
+        });
+    </script>
 </body>
 </html>
