--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <div class="portfolio">
             <h3>Mesin Pakan Otomatis</h3>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/ly36kn0ug4k?si=B-XdMBQzn26oFhsB" 
+                <iframe src="https://www.youtube.com/embed/N7aNDkxx_1M?si=hLw09R6h3AR87CEG" 
                 title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <p>Deskripsi singkat proyek ini. Saya mengerjakan Mesin Pakan Otomatis menggunakan Arduino Uno.</p>
